--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -1,6 +1,17 @@
 #containerPost{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    margin-left: 30px;
+}
+
+#containerPostSegundo{
+    margin-top: 1px;
+    margin-bottom: 1px;
     width: 100%;
     height: auto;
     display: flex;
@@ -8,10 +19,32 @@
     justify-content: center;
 }
 
+.image-container{
+    width: 50%;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    object-fit: cover;
+}
+
+#fondoLogin{
+    width: 140%;
+    height: 130%;
+    vertical-align: middle; 
+}
+
+#fondoRegistro{
+    width: 110%;
+    height: 130%;
+    vertical-align: middle;
+}
+
 .form-content{
-    width: 60%;
+    width: 50%;
     position: relative;
-    background-color: #1A2234;
+    background-color: transparent;
     padding: 20px 20px 20px;
     text-align: center;
     border-radius: 25px;
