--- a/src/views/_product_details_success.html
+++ b/src/views/_product_details_success.html
@@ -100,11 +100,7 @@
         </div>
     <div class="row mt-4">
         <div class="col-md-4 d-flex justify-content-center">
-            {% if product.urlImagen %}
-                <img src="{{ product.urlImagen }}" alt="Imagen de {{ product.nombre }}" width="200px" height="200px" class="rounded border b-2" loading="async" />
-            {% else %}
-                <img src="/no-image.jpg" alt="Imagen de {{ product.nombre }}" width="200px" height="200px" class="rounded border b-2" loading="async" onerror="this.onerror=null; this.src='/no-image.jpg';"/>
-            {% endif %}
+                <img src="/success.png" alt="Imagen de success" width="200px" height="200px" class="rounded border b-2" loading="async" onerror="this.onerror=null; this.src='/no-image.jpg';"/>
         </div>
         <div class="col-md-8">
             <div class="row row-detalle">
@@ -153,41 +149,34 @@
     </div>
     <div class="row mt-4">
         <div class="col p-3 d-flex justify-content-start">
-            <button id="btnEstadoGuardar" class="btn btn-primary"><i class="fa-solid fa-arrow-left fa-bounce"></i>    Volver</button>
+            <button id="btnEstadoAlquilar" class="btn btn-primary" data-product-id="{{ product.id }}"><i class="fa-solid fa-arrow-left fa-bounce"></i>    Volver</button>
         </div>
-        <div class="col p-3 d-flex justify-content-center">
+        <!--div class="col p-3 d-flex justify-content-center">
             <form action="/chat/{{ product.id }}" method="POST">
                 <button type="submit" class="btn btn-primary">
                     <i class="fab fa-facebook-messenger"></i> Enviar mensaje
                 </button>
             </form>
-        </div>
+        </div-->
     </div>
 </div>
 
 <script>
-    document.querySelector('#btnEstadoGuardar').addEventListener('click', function() {
-        var productId = this.getAttribute('data-product-id');
-        fetch(`/my_favs/${productId}`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ producto_id: productId }),
+    const estadoAlquilar = document.getElementById('btnEstadoAlquilar')
+    estadoAlquilar.addEventListener('click', async () => {
+        const response = await fetch('/estado_alquilar/{{ product.id }}',{
+            method: 'POST'
         })
-        .then(response => response.json())
-        .then(data => {
-            console.log(data.mensaje);
-            var cambiarIcono = this.querySelector('i');
-            cambiarIcono.classList.remove('fa-regular');
-            cambiarIcono.classList.add('fa-solid');
-        })
-        .catch((error) => {
-            console.error('Error:', error);
-        });
-    });
+        const data = await response.json()
+        console.log(data)
+        window.location.href = '/';
+    })
     
-    const payment = document.getElementById('formPayment')
+    /*
+    document.querySelector('#btnEstadoAlquilar').addEventListener('click', function() {
+        const productId = button.getAttribute('data-product-id');
+        window.location.href = '/estado_alquilar/'+ productId;;
+    });
 
     payment.addEventListener('click', async () => {
         const response = await fetch('/payment/{{ product.id }}', {
@@ -198,6 +187,7 @@
         console.log(data)
         window.location.href = data.init_point;
     })
+    */
 
 </script>
 {% endblock %}
