--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -40,6 +40,33 @@
         object-fit: cover;
         margin-bottom: 10px;
     }
+
+    .alquilado::after {
+        content: "";
+        position: absolute;
+        top: -15px;
+        left: -65px;
+        rotate:-45deg;
+        border-left: 100px solid transparent;
+        border-right: 100px solid transparent;
+        border-bottom: 100px solid #f00; /* Replace #f00 with your desired color */
+    }
+
+    .alquilado::before {
+        content: "Alquilado";
+        position: absolute;
+        top: 40px;
+        left: -90px;
+        rotate: -45deg;
+        border-left: 100px solid transparent;
+        border-right: 100px solid transparent;
+        color: white;
+        z-index: 1;
+        text-align: center;
+        font-size: 1.3em;
+    }
+
+
     .fs-3{
         font-size: 1rem;
     }
@@ -129,7 +156,7 @@
                                     '¡Eliminado!',
                                     'El producto ha sido eliminado.',
                                     'success'
-                                ); 
+                                );
                                 document.getElementById('eliminar-' + productId).closest('.product').remove();
                             }else{
                                 console.error(data.message);
