change: imagenes del login y registrar

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -10,7 +10,7 @@
 {% block main %}
     <div class="container" id="containerPost">
         <div class="image-container">
-            <img src="/fondo-login.jpg" id="fondoLogin" alt="fondoLogin">
+            <img src="/hombre-sin-dinero.jpg" id="fondoLogin" alt="fondoLogin" style="width: 90%">
         </div>
         <div class="form-content">
             <h1 id="title" style="color: black;">¡Hola, te extrañábamos!</h1>
