--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -9,8 +9,8 @@
 
 {% block main %}
     <div class="container" id="containerPost">
-        <div class="image-container">
-            <img src="/fondoRegistro.jpg" id="fondoRegistro" alt="fondoRegistro">
+        <div class="image-container" style="height: 100%">
+            <img src="/hombre_garage.jpg" id="fondoRegistro" alt="fondoRegistro" style="height: 100%;">
         </div>
         <div class="form-content">
             <h1 id="title" style="color: black;">Bienvenid@</h1>
