--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -1,6 +1,6 @@
 <style>
     .btn:hover {
-        background-color: #6982E8;
+        background-color: #4F6E7D;
         color: white;
     }
     .dropdown-menu{
@@ -22,7 +22,7 @@
         background-color: #e9ecef;
     }
     .dropdown-item.active, .dropdown-item:active {
-        background-color: #6982E8;
+        background-color: #618A9E;
         color: #fff;
     }
     .dropdown-toggle::after {
@@ -40,7 +40,7 @@
     }
 </style>
 
-<nav class="navbar bg-gradient bg-opacity-75 py-3">
+<nav class="navbar py-3">
     <div class="container">
         <div class="navbar-brand" onclick="window.location.href = '/'">
             <img src="/Logov3.png" alt="Logo de rentAR" width="100" height="auto">
@@ -195,7 +195,7 @@
         iconRead.className = 'fa-regular fa-circle-check fa-xl';
         iconRead.style.cursor = 'pointer';
         iconRead.title = 'Marcar como leído';
-        iconRead.style.color = '#6982E8';  
+        iconRead.style.color = '#4F6E7D';  
         iconRead.style.marginRight = '10px';
         iconRead.style.position = 'absolute';
         iconRead.style.right = '0';
