--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -241,7 +241,7 @@
     }
 
     .select2-results__option--highlighted{
-        background-color: #6982E8 !important;
+        background-color: #4F6E7D !important;
         color: #ffffff;
     }
 </style>
