--- a/src/views/login.html
+++ b/src/views/login.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="row">
                     <div class="col" style="margin-top: 6px;">
-                        <a href="/sign-up">¿No tienes una cuenta? Registrate</a>
+                        <a href="/sign-up" style="color: #4F6E7D;">¿No tienes una cuenta? Registrate</a>
                     </div>
                 </div>
             </form>
@@ -136,7 +136,7 @@
     }
 
     .select2-results__option--highlighted{
-        background-color: #6982E8 !important;
+        background-color: #4F6E7D !important;
         color: #ffffff;
     }
 </style>
