--- a/src/static/css/formstyle.css
+++ b/src/static/css/formstyle.css
@@ -62,7 +62,7 @@
     width: 30px;
     height: 4px;
     border-radius: 3px;
-    background: #6982E8;
+    background: #9FBCCB;
     position: absolute;
     bottom: -12px;
     left: 50%;
@@ -104,7 +104,7 @@ input::placeholder{
 
 .input-field i{
     margin-left: 15px;
-    color: #6982E8;
+    color: #9FBCCB;
 }
 
 .btn-field{
@@ -119,7 +119,7 @@ input::placeholder{
 .btn-field button{
     flex-basis: 48%;
     font-size: 14px;
-    background-color: #6982E8;
+    background-color: #618A9E;
     color: #FFFFFF;
     height: 35px;
     border-radius: 8px; /*Eliminar en caso de que se quiera hacer el botón como un cuadrado*/
@@ -130,6 +130,7 @@ input::placeholder{
     cursor: pointer;
     transition: background 1s;
     margin-right: 10px;
+    margin-bottom: 8px;
 }
 
 #categoriaInput, #localidadInput, #municipioInput{
