--- a/src/views/_footer.html
+++ b/src/views/_footer.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark  bg-opacity-75 bg-gradient">
+<nav class="navbar navbar-expand-lg">
         <div class="container">
                 <strong style="color: #ced4da"> rentAR </strong>
                 <p style="color: white ;margin-top: 1.5rem;; font-family: 'Montserrat', sans-serif;">¿Como contactarnos?
