--- a/src/views/_product-card.html
+++ b/src/views/_product-card.html
@@ -16,7 +16,7 @@
         color: #FFFFFF;
     }
     .alquilado{
-        background-color: gray;
+        background-color: #618A9E;
         opacity: 85%;
         width: 300px;
         height: 300px;
@@ -33,6 +33,7 @@
         position: relative;
         padding-left: 0;
         padding-right: 0;
+        background-color: #9FBCCB;
     }
     .product.card img{
         width: 180px;
