--- a/src/views/registro.html
+++ b/src/views/registro.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="row">
                     <div class="col" style="margin-top: 6px;">
-                        <a href="/sign-in">¿Ya tienes una cuenta? Iniciá sesión</a>
+                        <a href="/sign-in" style="color: #4F6E7D;">¿Ya tienes una cuenta? Iniciá sesión</a>
                     </div>
                 </div>
             </form>
@@ -136,7 +136,7 @@
     }
 
     .select2-results__option--highlighted{
-        background-color: #6982E8 !important;
+        background-color: #4F6E7D !important;
         color: #ffffff;
     }
 </style>
