feat: Se modifica el texto precio a precio por dia

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -126,7 +126,7 @@
 
             <div class="row row-detalle">
                 <div class="col-md-3 m-1">
-                    <strong class="span-label">Precio:</strong>
+                    <strong class="span-label">Precio por dia:</strong>
                 </div>
                 <div class="col-md-4 m-1">
                     <span class="span-content"> {{ product.moneda.simbolo }} {{ product.precio }} {{ product.moneda.sigla }}</span>
