--- a/src/views/formulario.html
+++ b/src/views/formulario.html
@@ -42,7 +42,7 @@
                         </div>
                         <div style="display: flex; align-items: center">
                             <i class="fa-solid fa-dollar-sign"></i>
-                            <input type="text" name="precio" placeholder="Precio" class="small-input">
+                            <input type="text" name="precio" placeholder="Precio por dia" class="small-input">
                         </div>
                     </div>
                     <div class="input-field" id="detalleInput">
