fix: se arregla calificacion

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -454,6 +454,7 @@
 
         // Verificar si se debe mostrar el SweetAlert
         if (alquiler) {
+            console.log(alquiler);
             mostrarSweetAlert();
         }
 
